--- a/tasks/rhel8.yml
+++ b/tasks/rhel8.yml
@@ -27,7 +27,7 @@
 
 - name: RHEL 8.0 UEFI
   command: >-
-    fast-vm import_image rhel-8.0-uefi {{ rhel_image_url_base }}/generated/6g__rhel-8.0-uefi-uefi.img.xz
+    fast-vm import_image rhel-8.0-uefi {{ rhel_image_url_base }}/generated/6g__rhel-8.0-uefi.img.xz
     {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml
     {{ hacks_url_base }}/rhel/hacks/6g_rhel-8-hacks-uefi.sh
   args:
