--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -70,3 +70,15 @@
   tags:
     - debian
     - debian9_9
+
+### Debian 10.0
+- name: Debian 10.0 BIOS
+  command: >-
+    fast-vm import_image debian-10.0 {{ public_image_url_base }}/generated/6g__debian-10.0.img.xz
+    {{ xml_url_base }}/debian/xml/debian-10.xml
+    {{ hacks_url_base }}/debian/hacks/debian-10.sh
+  args:
+    creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}debian-10.0"
+  tags:
+    - debian
+    - debian10_0
