--- a/tasks/rhel7.yml
+++ b/tasks/rhel7.yml
@@ -182,3 +182,26 @@
   tags:
     - rhel7_uefi
     - rhel7_7_uefi
+
+### RHEL 7.8
+- name: RHEL 7.8 BIOS
+  command: >-
+    fast-vm import_image rhel-7.8 {{ rhel_image_url_base }}/generated/6g__rhel-7.8.img.xz
+    {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml
+    {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh
+  args:
+    creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.8"
+  tags:
+    - rhel7
+    - rhel7_8
+
+- name: RHEL 7.8 UEFI
+  command: >-
+    fast-vm import_image rhel-7.8-uefi {{ rhel_image_url_base }}/generated/6g__rhel-7.8-uefi.img.xz
+    {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml
+    {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh
+  args:
+    creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.8-uefi"
+  tags:
+    - rhel7_uefi
+    - rhel7_8_uefi
